# dagian

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
dagian/: __init__.py  bundling.py  dag.py  data_definition.py  data_generator.py  data_handlers.py  decorators.py
dagian/data_wrappers/: pandas_hdf.py
dagian/data_wrappers/tests/: test_pandas_hdf.py
dagian/tests/: lifetime_feature_generator.py  test_feature_generator.py
dagian/tools/: config.py  dag.py  dagian_runner.py
dagian/utils/: frozen_dict.py
dagian/utils/tests/: test_frozen_dict.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
examples/lifetime_prediction/: lifetime_feature_generator.py  lifetime_test.csv  tests.py
examples/lifetime_prediction/.dagianrc/: bundle_config.yml  config.yml
src/dagian/: __init__.py  bundling.py  dag.py  data_definition.py  data_generator.py  data_handlers.py
src/dagian/data_wrappers/: pandas_hdf.py
src/dagian/data_wrappers/tests/: test_pandas_hdf.py
src/dagian/tests/: lifetime_feature_generator.py  test_feature_generator.py
src/dagian/tools/: __init__.py  dagian_runner.py
src/dagian/utils/: frozen_dict.py
src/dagian/utils/tests/: test_frozen_dict.py
